@@ -1,0 +1,16 @@
+// Code generated by mockery v1.0.0. DO NOT EDIT.
+
+package metrics
+
+import mock "github.com/stretchr/testify/mock"
+import time "time"
+
+// Recorder is an autogenerated mock type for the Recorder type
+type Recorder struct {
+	mock.Mock
+}
+
+// ObserveHTTPRequestDuration provides a mock function with given fields: id, duration, method, code
+func (_m *Recorder) ObserveHTTPRequestDuration(id string, duration time.Duration, method string, code string) {
+	_m.Called(id, duration, method, code)
+}
